welcome.lessons.welcome.methods.flowerpot.FlowerPot.scala.error
FlowerPot:7: error: not found: value adessineFleur
  adessineFleur(Color.cyan);
  ^